--- a/TodoMVC.Client/app/partials/todoList-edit.html
+++ b/TodoMVC.Client/app/partials/todoList-edit.html
@@ -4,7 +4,7 @@
     <h1>Edit TodoList</h1>
 </div>
 
-<form class="form-horizontal" role="form" ng-submit="editTodoList(todoList)">
+<form class="form-horizontal" role="form" ng-submit="editTodoList()">
     <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">List Name</label>
         <div class="col-sm-10">
@@ -14,7 +14,7 @@
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <a class="btn btn-default" href="#/">Cancel</a>
-            <button class="btn btn-default" type="submit">Create</button>
+            <button class="btn btn-default" type="submit">Edit</button>
         </div>
     </div>
 </form>
