--- a/TodoMVC.Client/app/partials/todoList-create.html
+++ b/TodoMVC.Client/app/partials/todoList-create.html
@@ -8,12 +8,7 @@
     <div class="form-group">
         <label for="inputName" class="col-sm-2 control-label">List Name</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputName" placeholder="My cool list" ng-model="todoList.Name" required>
-            <div ng-show="form.inputName.$dirty && form.inputName.$invalid">
-                Invalid:
-                <span ng-show="form.inputName.$error.required">Tell us your email.</span>
-                <span ng-show="form.inputName.$error.email">This is not a valid email.</span>
-            </div>
+            <input type="text" class="form-control" id="inputName" placeholder={{text}} ng-model="todoList.Name" required>
         </div>
     </div>
     <div class="form-group">
