--- a/TodoMVC.Client/app/partials/todoList-list.html
+++ b/TodoMVC.Client/app/partials/todoList-list.html
@@ -7,6 +7,8 @@
     </a>
 </div>
 
+<img ng-show="viewLoading" src="./images/ajax-loader.gif" class="ajax-loader repeated-item"/>
+
 <div class="panel panel-default repeated-item" ng-repeat="todoList in todoLists">
     <div class="panel-heading">
         {{ todoList.Name }}
