Add createItem view + all gotten info.

--- a/TodoMVC.Client/app/partials/todoList-list.html
+++ b/TodoMVC.Client/app/partials/todoList-list.html
@@ -20,8 +20,8 @@
             <li class="list-group-item">{{ todoItem.Title }}</li>
         </ul>
 
-        <button type="button" class="btn btn-default">
+        <a href="#/item/create" type="button" class="btn btn-default">
             <span class="glyphicon glyphicon-plus-sign"></span> Add Item
-        </button>
+        </a>
     </div>
 </div>
