edit item now works client side

--- a/TodoMVC.Client/app/css/main.css
+++ b/TodoMVC.Client/app/css/main.css
@@ -75,6 +75,9 @@
     background-color:#FFBABA;
 }
 
+/* turns input border green when valid by angular  */
+/*
 input.ng-valid {
     border: 1px solid green;
 }
+*/
